fix display of flyer on mobile devices

--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -57,8 +57,8 @@
   }
 
   .schniba-flyer {
+    width: 100%;
     max-width: 512px;
     margin-bottom: 3rem;
-    transform: rotate(3deg);
   }
 }
